[package]
name = "qiniu-http"
version = "0.0.5"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.56.0"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu HTTP Interface for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_version_runtime = "0.1.5"
assert-impl = "0.1.3"
once_cell = "1.4.1"
http = "0.2.4"
serde = "1.0.130"
smart-default = "0.6.0"
auto_impl = { package = "bachue-auto_impl", version = "0.5.1" }
futures-lite = { version = "1.11.2", optional = true }

qiniu-utils = { version = "0.0.5", path = "../utils" }

[features]
default = []
async = ["futures-lite"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
