[package]
name = "qiniu-http"
version = "0.1.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu HTTP Interface for Rust"
keywords = ["qiniu", "storage"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-impl = "0.1.3"
once_cell = "1.4.1"
http = "0.2.4"
serde = "1.0.130"
smart-default = "0.6.0"
auto_impl = "1.0.0"
futures-lite = { version = "1.11.2", optional = true }

qiniu-utils = { version = "0.1.4", path = "../utils" }

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = []
async = ["futures-lite"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
