[package]
name = "qiniu-objects-manager"
version = "0.3.0"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Objects Manager for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
tap = "1.0.1"
anyhow = "1.0.75"
indexmap = "2.0.0"
once_cell = "1.18.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
assert-impl = "0.1.3"
futures = { version = "0.3.28", optional = true }
async-once-cell = { version = "0.5.3", optional = true }
dyn-clonable = "0.9.0"
auto_impl = "1.1.0"

qiniu-apis = { version = "0.3.0", path = "../apis", default-features = false }
qiniu-utils = { version = "0.3.0", path = "../utils" }

[dev-dependencies]
env_logger = "0.10.0"
form_urlencoded = "1.2.0"
qiniu-utils = { version = "0.3.0", path = "../utils", features = ["macros"] }

[features]
default = ["ureq"]
async_std_runtime = [
    "futures",
    "async-once-cell",
    "qiniu-utils/async_std_runtime",
    "qiniu-apis/async_std_runtime",
]
tokio_runtime = [
    "futures",
    "async-once-cell",
    "qiniu-utils/tokio_runtime",
    "qiniu-apis/tokio_runtime",
]
reqwest = ["qiniu-apis/reqwest"]
isahc = ["qiniu-apis/isahc"]
ureq = ["qiniu-apis/ureq"]
c_ares = ["qiniu-apis/c_ares"]
trust_dns = ["qiniu-apis/trust_dns"]
tokio1 = ["qiniu-apis/tokio1"]
tokio02 = ["qiniu-apis/tokio02"]
tokio03 = ["qiniu-apis/tokio03"]
dns-over-https = ["qiniu-apis/dns-over-https"]
dns-over-https-rustls = ["qiniu-apis/dns-over-https-rustls"]
dns-over-tls = ["qiniu-apis/dns-over-tls"]
dns-over-rustls = ["qiniu-apis/dns-over-rustls"]
dns-over-native-tls = ["qiniu-apis/dns-over-native-tls"]
dnssec-openssl = ["qiniu-apis/dnssec-openssl"]
dnssec-ring = ["qiniu-apis/dnssec-ring"]
dnssec = ["qiniu-apis/dnssec"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
