[package]
name = "qiniu-c-translator"
version = "0.0.3"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu C headers Translator, generate c bindings for multiple programming languages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "0.23.0", features = ["runtime", "clang_8_0"] }
tap = "0.4.0"
clap = "2.33.0"
getset = "0.0.9"
heck = "0.3.1"
lazy_static = "1.4.0"
regex = "1"
matches = "0.1.8"
advancedresearch-tree_mem_sort = "0.2.0"
