[package]
name = "qiniu-ng-c"
version = "0.0.1"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "New Generation Qiniu Resource Storage SDK for C/C++"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
qiniu-ng = { version = "0.0.1", path = "../qiniu-rust", features = ["use-libcurl"] }
qiniu-http = { version = "0.0.1", path = "../qiniu-rust-http" }
curl = { version = "0.4.25", features = ["http2"] }
curl-sys = "0.4.23"
rust-crypto = "0.2.36"
libc = "0.2.60"
cfg-if = "0.1"
num-traits = "0.2"
num-derive = "0.2"
once_cell = "1.2.0"
tap = "0.4.0"
mime = "0.3.14"

[build-dependencies]
cbindgen = "0.9.0"
