[package]
name = "qiniu-ng-c"
version = "0.0.2"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Resource Storage SDK for C"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
qiniu-ng = { version = "0.0.2", path = "../qiniu-rust" }
qiniu-http = { version = "0.0.2", path = "../qiniu-rust-http" }
curl = { version = "0.4.25", features = ["http2"] }
curl-sys = "0.4.23"
digest = "0.8.1"
libc = "0.2.60"
once_cell = "1.2.0"
tap = "0.4.0"
mime = "0.3.14"
serde_json = "1.0.40"
widestring = "0.4.0"
matches = "0.1.8"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["impl-default"] }

[features]
default = ["use-libcurl"]
use-libcurl = ["qiniu-ng/use-libcurl"]
