[package]
name = "qiniu-ffi"
version = "0.0.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu FFI Interfaces for Qiniu-Rust"
keywords = ["qiniu", "storage"]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2.73"
widestring = "0.4.2"
tap = "0.4.0"

qiniu-etag = { version = "0.0.4", path = "../qiniu-rust/etag" }
