[package]
name = "qiniu-http"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Provide http call trait for qiniu"

[dependencies]
getset = { branch = "master", git = "https://github.com/Hoverbear/getset.git" }
derive_builder = "0.7.2"
