[package]
name = "qiniu-http"
version = "0.0.1"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Provide http call trait for qiniu"

[dependencies]
getset = "0.0.9"
derive_builder = "0.9.0"
serde_json = "1.0.40"
tempfile = "3.1.0"
