[package]
name = "qiniu-test-utils"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Test http client with qiniu"
keywords = ["qiniu", "storage", "testing"]

[dependencies]
dotenv = "0.14.1"
getset = "0.0.7"
tempfile = "3.1.0"
