[package]
name = "qiniu-test-utils"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Test http client with qiniu"
keywords = ["qiniu", "storage", "testing"]

[dependencies]
dotenv = "0.14.1"
getset = "0.0.9"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
regex = "1"
rand = "0.7.2"
base64 = "0.10.1"
rand_core = "0.5.1"

qiniu-http = { version = "0.1.0", path = "../qiniu-rust-http" }
