[package]
name = "qiniu-http-test"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Test http client with qiniu"
keywords = ["qiniu", "storage", "testing"]

[dependencies]
qiniu = { version = "0.1.0", path = "../qiniu-rust" }
qiniu-test-utils = { version = "0.1.0", path = "../qiniu-rust-test-utils" }

[features]
default = []
use-libcurl = ["qiniu/use-libcurl"]
