[package]
name = "qiniu-http-test"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Test http client with qiniu"
keywords = ["qiniu", "storage", "testing"]

[dev-dependencies]
chrono = "0.4.8"
qiniu = { version = "0.1.0", path = "../qiniu-rust" }
qiniu-http = { version = "0.1.0", path = "../qiniu-rust-http" }
qiniu-test-utils = { version = "0.1.0", path = "../qiniu-rust-test-utils" }
mime = "0.3.14"
serde_json = "1.0.40"

[features]
default = []
use-libcurl = ["qiniu/use-libcurl"]
