[package]
name = "qiniu-http-test"
version = "0.0.2"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Test http client with qiniu"
keywords = ["qiniu", "storage", "testing"]

[dev-dependencies]
chrono = "0.4.8"
qiniu-ng = { version = "=0.0.2", path = "../qiniu-rust" }
qiniu-http = { version = "=0.0.2", path = "../qiniu-rust-http" }
qiniu-test-utils = { version = "=0.0.2", path = "../qiniu-rust-test-utils" }
mime = "0.3.14"
serde_json = "1.0.40"
matches = "0.1.8"

[features]
default = []
use-libcurl = ["qiniu-ng/use-libcurl"]
