[package]
name = "qiniu-with-libcurl"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Provide libcurl for qiniu"

[dependencies]
qiniu-http = { version = "0.1.0", path = "../qiniu-rust-http" }
curl = "0.4.22"
tempfile = "3.1.0"
rustc_version_runtime = "0.1.5"
derive_builder = "0.7.2"
