[package]
name = "qiniu-with-libcurl"
version = "0.0.2"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Provide libcurl for qiniu"

[dependencies]
qiniu-http = { version = "0.0.2", path = "../qiniu-rust-http" }
lazy_static = "1.4.0"
url = "2.1.0"
curl = { version = "0.4.25", features = ["http2"] }
tempfile = "3.1.0"
rustc_version_runtime = "0.1.5"
derive_builder = "0.9.0"
object-pool = "0.4.4"
