[package]
name = "qiniu-with-reqwest"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Provide reqwest for qiniu"

[dependencies]
qiniu-http = { version = "0.1.0", path = "../qiniu-rust-http" }
reqwest = "0.9.19"
http = "0.1.18"
url = "2.1.0"
