[package]
name = "qiniu"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Resource Storage SDK for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
rust-crypto = "0.2.36"
base64 = "0.10.1"
chashmap = "2.2.2"
num = "0.2.0"
url = "2.0.0"
bytesize = "1.0.0"
getset = "0.0.7"
derive_builder = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
error-chain = "0.12.1"
lazy_static = "1.4.0"
maplit = "1.0.2"

qiniu-with-libcurl = { version = "0.1.0", path = "../qiniu-rust-with-libcurl", optional = true }
qiniu-http = { version = "0.1.0", path = "../qiniu-rust-http" }

[dev-dependencies]
stringreader = "0.1.1"
qiniu-test-utils = { version = "0.1.0", path = "../qiniu-rust-test-utils" }

[features]
default = []
use-libcurl = ["qiniu-with-libcurl"]
