[package]
name = "qiniu"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Resource Storage SDK for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
rust-crypto = "0.2.36"
base64 = "0.10.1"
crc = "1.8.1"
chashmap = "2.2.2"
num = "0.2.0"
url = "2.1.0"
bytesize = "1.0.0"
getset = "0.0.9"
derive_builder = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
error-chain = "0.12.1"
lazy_static = "1.4.0"
maplit = "1.0.2"
delegate = "0.3.0"
once_cell = "1.2"
multipart = { git = "https://github.com/bachue/multipart.git", version = "0.16.1", features = ["client"], default-features = false }
mime = "0.3.14"
mime_guess = "2.0.1"
rand = "0.7.2"
tempfile = "3.1.0"
rayon = "1.2.0"

qiniu-with-libcurl = { version = "0.1.0", path = "../qiniu-rust-with-libcurl", optional = true }
qiniu-http = { version = "0.1.0", path = "../qiniu-rust-http" }

[dev-dependencies]
qiniu-test-utils = { version = "0.1.0", path = "../qiniu-rust-test-utils" }
regex = "1"

[features]
default = []
use-libcurl = ["qiniu-with-libcurl"]
