[package]
name = "qiniu-ng"
version = "0.0.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Resource Storage SDK for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
hex = "0.4.0"
digest = "0.8.1"
hmac = "0.7.1"
crypto-mac = "0.7.0"
md5 = "0.7.0"
sha-1 = "0.8.1"
base64 = "0.10.1"
crc = "1.8.1"
chashmap = "2.2.2"
num = "0.2.0"
url = "2.1.0"
bytesize = "1.0.0"
rustc_version_runtime = "0.1.5"
getset = "0.0.9"
derive_builder = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
lazy_static = "1.4.0"
delegate = "0.3.0"
once_cell = "1.2"
qiniu-multipart = { version = "0.16.2", features = ["client"], default-features = false }
mime = "0.3.14"
mime_guess = "2.0.1"
rand = "0.7.2"
tempfile = "3.1.0"
rayon = "1.2.0"
assert-impl = "0.1.3"
tap = "0.4.0"
thiserror = "1.0"
dirs = "2.0.2"
fs2 = "0.4.3"
sys-info = "= 0.5.8"
matches = "0.1.8"

qiniu-with-libcurl = { version = "=0.0.3", path = "../qiniu-rust-with-libcurl", optional = true }
qiniu-http = { version = "=0.0.3", path = "../qiniu-rust-http" }

[dev-dependencies]
qiniu-test-utils = { version = "=0.0.3", path = "../qiniu-rust-test-utils" }
regex = "1"
clap = "2.33.0"
rand = "0.7.2"
chrono = "0.4.8"

[features]
default = []
use-libcurl = ["qiniu-with-libcurl"]
