[package]
name = "qiniu-sdk-examples"
version = "0.2.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu SDK Examples"
keywords = ["qiniu", "storage"]

[dev-dependencies]
anyhow = "1.0.41"
async-std = { version = "1.6.3", features = ["attributes"] }
env_logger = "0.9.0"
log = "0.4.14"
qiniu-sdk = { version = "0.2.0", path = "../sdk", features = ["apis", "upload", "objects", "async", "isahc", "trust_dns"] }
structopt = "0.3.23"

[dependencies]
futures = "0.3.17"
