[package]
name = "qiniu-sdk-examples"
version = "0.2.3"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.64.0"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu SDK Examples"
keywords = ["qiniu", "storage"]

[dev-dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.10.0"
log = "0.4.20"
qiniu-sdk = { version = "0.2.3", path = "../sdk", features = [
    "apis",
    "upload",
    "objects",
    "async",
    "isahc",
    "trust_dns",
] }
structopt = "0.3.26"

[dependencies]
futures = "0.3.28"
