[package]
name = "qiniu-upload-manager"
version = "0.3.0"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Upload Manager for Rust"
keywords = ["qiniu", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
auto_impl = "1.1.0"
anyhow = "1.0.75"
sha-1 = "0.10.1"
hex = "0.4.3"
digest = "0.10"
dashmap = "5.5.1"
once_cell = "1.18.0"
serde_json = "1.0.105"
assert-impl = "0.1.3"
dyn-clonable = "0.9.0"
crossbeam-utils = "0.8.16"
os_str_bytes = "6.5.1"
tap = "1.0.1"
md-5 = "0.10.5"
rayon = "1.7.0"
serde = { version = "1.0.185", features = ["derive"] }
futures = { version = "0.3.28", optional = true }
async-once-cell = { version = "0.5.3", optional = true }
async-std = { version = "1.12.0", optional = true }

qiniu-apis = { version = "0.3.0", path = "../apis", default-features = false }
qiniu-upload-token = { version = "0.3.0", path = "../upload-token" }
qiniu-utils = { version = "0.3.0", path = "../utils" }
take_mut = "0.2.2"

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.8.0"
rand = "0.8.5"
ipipe = "0.11.7"
defer-lite = "1.0.0"
multipart = { version = "0.18.0", features = ["server"] }
async-std = { version = "1.12.0", features = ["attributes"] }
text_io = "0.1.12"
structopt = "0.3.26"

[features]
default = ["ureq"]
async = ["futures", "async-once-cell", "async-std", "qiniu-apis/async"]
reqwest = ["qiniu-apis/reqwest"]
isahc = ["qiniu-apis/isahc"]
ureq = ["qiniu-apis/ureq"]
c_ares = ["qiniu-apis/c_ares"]
trust_dns = ["qiniu-apis/trust_dns"]
tokio1 = ["qiniu-apis/tokio1"]
tokio02 = ["qiniu-apis/tokio02"]
tokio03 = ["qiniu-apis/tokio03"]
dns-over-https = ["qiniu-apis/dns-over-https"]
dns-over-https-rustls = ["qiniu-apis/dns-over-https-rustls"]
dns-over-tls = ["qiniu-apis/dns-over-tls"]
dns-over-rustls = ["qiniu-apis/dns-over-rustls"]
dns-over-native-tls = ["qiniu-apis/dns-over-native-tls"]
dnssec-openssl = ["qiniu-apis/dnssec-openssl"]
dnssec-ring = ["qiniu-apis/dnssec-ring"]
dnssec = ["qiniu-apis/dnssec"]
docs = []

[[example]]
name = "upload"
required-features = ["async", "isahc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
