[package]
name = "qiniu-upload-token"
version = "0.1.3"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Upload Policy Builder & Parser, Upload Token Generator & Parser for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
serde_json = "1.0"
assert-impl = "0.1.3"
once_cell = "1.4.1"
thiserror = "1.0"
duplicate = "0.2.7"
tap = "1.0.1"
dyn-clonable = "0.9.0"
smart-default = "0.6.0"
serde = { version = "1.0.130", features = ["derive"] }
auto_impl = "1.0.0"
futures = { version = "0.3.16", optional = true }

qiniu-credential = { version = "0.1.3", path = "../credential" }
qiniu-utils = { version = "0.1.3", path = "../utils" }

[dev-dependencies]
anyhow = "1.0.44"
async-std = { version = "1.6.3", features = ["attributes"] }
mime = "0.3.16"
structopt = "0.3.23"

[features]
default = []
async = ["qiniu-credential/async", "futures"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
