[package]
name = "qiniu-upload-token"
version = "0.3.0"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Upload Policy Builder & Parser, Upload Token Generator & Parser for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
anyhow = "1.0.75"
serde_json = "1.0"
assert-impl = "0.1.3"
thiserror = "1.0"
duplicate = "1.0.0"
dyn-clonable = "0.9.0"
once_cell = "1.18.0"
serde = { version = "1.0.185", features = ["derive"] }
auto_impl = "1.1.0"
futures = { version = "0.3.28", optional = true }

qiniu-credential = { version = "0.3.0", path = "../credential" }
qiniu-utils = { version = "0.3.0", path = "../utils" }

[dev-dependencies]
mime = "0.3.17"
structopt = "0.3.26"

qiniu-utils = { version = "0.3.0", path = "../utils", features = ["macros"] }

[features]
default = []
async_std_runtime = [
    "futures",
    "qiniu-utils/async_std_runtime",
    "qiniu-credential/async_std_runtime",
]
tokio_runtime = [
    "futures",
    "qiniu-utils/tokio_runtime",
    "qiniu-credential/tokio_runtime",
]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
