[package]
name = "qiniu-upload-token"
version = "0.0.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Upload Policy Builder & Parser, Upload Token Generator & Parser for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
serde_json = "1.0"
assert-impl = "0.1.3"
once_cell = "1.4.1"
thiserror = "1.0"
duplicate = "0.2.7"
futures = { version = "0.3.5", optional = true }

qiniu-credential = { version = "0.0.4", path = "../credential", optional = true }
qiniu-utils = { version = "0.0.4", path = "../utils" }

[dev-dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
clap = "3.0.0-beta.1"

[features]
default = ["qiniu-credential"]
async = ["futures", "qiniu-credential/async"]
docs = []

[package.metadata.docs.rs]
features = ["docs", "async"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
