[package]
name = "qiniu-upload-token"
version = "0.0.4"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.56.0"
license = "Apache-2.0"
homepage = "https://www.qiniu.com"
description = "Qiniu Upload Policy Builder & Parser, Upload Token Generator & Parser for Rust"
keywords = ["qiniu", "storage"]

[dependencies]
serde_json = "1.0"
assert-impl = "0.1.3"
once_cell = "1.4.1"
thiserror = "1.0"
duplicate = "0.2.7"
tap = "1.0.1"
dyn-clonable = "0.9.0"
futures = { version = "0.3.16", optional = true }

qiniu-credential = { version = "0.0.4", path = "../credential", optional = true }
qiniu-utils = { version = "0.0.4", path = "../utils" }

[dev-dependencies]
anyhow = "1.0.44"
async-std = { version = "1.6.3", features = ["attributes"] }
mime = "0.3.16"
structopt = "0.3.23"

[features]
default = ["qiniu-credential"]
async = ["qiniu-credential/async", "futures"]
docs = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "feature=\"docs\""]
