[package]
name = "qiniu-utils-macros"
version = "0.3.0"
authors = [
    "Rong Zhou <zhourong@qiniu.com>",
    "Shanghai Qiniu Information Technologies Co., Ltd.",
]
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
repository = "https://github.com/qiniu/rust-sdk.git"
homepage = "https://www.qiniu.com"
description = "Qiniu SDK Utilities for Rust"
keywords = ["qiniu", "storage"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
